@@ -1,4 +1,4 @@
 language: perl
 branches:
-only:
-- master
+  only:
+    - master
